--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "react-whatsapp": "^0.3.0",
     "slick-carousel": "^1.8.1",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
